# backend/src/main/java/com/AutoSync/vehicle_management_system/model/AlertType.java
@@ -2,5 +2,6 @@ package com.AutoSync.vehicle_management_system.model;
 
 public enum AlertType {
     WEAR,
-    EXPIRY
+    EXPIRY,
+    SERVICE_COMPLETED
 }
